Make code compatible to Java 8.